Fixed setup spacing

--- a/src/app/page/settings/setup/setup.component.scss
+++ b/src/app/page/settings/setup/setup.component.scss
@@ -13,6 +13,7 @@
 }
 
 label {
+  line-height: 24px;
   margin-top: 16px;
 }
 
